--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Play</h1>
+        <h1>Play Rock Paper Scissors</h1>
 
     </header>
     <script src="./assets/js/script.js"></script>
